# bfc

./: .gitignore  AUTHORS  MKf  Makefile.am  Makefile.am~  README.md  bootstrap  bootstrap.conf  bootstrap.conf~  configure.ac  configure.ac~
build-aux/: .gitignore
examples/: Makefile  a.out  hello-world-optimizated.bf  hello-world.bf  print-a.bf
gl/lib/: xstrndup.c  xstrndup.h
gnulib-tests/: Makefile.am
lib/: .gitignore  config.hin  dup-safer.c  fd-safer.c  fopen-safer.c  gnulib.mk.bak  pipe-safer.c
m4/: .gitignore  gnulib-cache.m4
src/: Makefile  a.out  arch.c  arch.h  bfc  compile_asm_i386_linux.c  compile_asm_i386_linux.h  compiler.c  compiler.h  hello-world  i386.c  local.mk  local.mk~  main.c  optimizer.c  optimizer.h  system.h  tokenizer.c  tokenizer.h  x86_64.c
src/arch/: arm.c  arm64.c  asm.c  core.h  local.mk  x86-asm.c  x86-asm.h  x86.c  x86_64.c
src/examples/: factorial.bf  hello-world-optimizated.bf  hello-world.bf  hello-world2.bf  mult.bf  test.bf
tests/: Makefile  test_tokenizer.c  tests.c
